--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Thankful ========",
   "main": "index.js",
   "scripts": {
-    "test": "pass"
+    "test": "true"
   },
   "repository": {
     "type": "git",
