--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Thankful ========",
   "main": "index.js",
   "scripts": {
-    "test": "true"
+    "test": "true",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "repository": {
     "type": "git",
