--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "homepage": "https://github.com/SuperuserLabs/thankful#readme",
   "devDependencies": {
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^23.1.0",
-    "prettier": "1.13.5"
+    "prettier": "1.13.5",
+    "webpack": "^4.12.0"
   },
-  "dependencies": {
-    "eslint": "^4.19.1"
-  }
+  "dependencies": {}
 }
