--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^23.1.0",
     "prettier": "1.13.5",
-    "webpack": "^4.12.0"
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   },
   "dependencies": {}
 }
