--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
     "prettier": "1.13.5",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   },
