--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
@@ -39,8 +40,13 @@
     "prettier": "1.13.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "scss-loader": "0.0.1",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue": "^2.5.16"
+  }
 }
