--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "lint-staged": "^7.2.0",
     "prettier": "1.13.5",
     "pug": "^2.0.3",
-    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
+    "raw-loader": "^0.5.1",
+    "vue": "^2.5.16",
     "scss-loader": "0.0.1",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   },
-  "dependencies": {
-    "vue": "^2.5.16"
-  }
+  "dependencies": {}
 }
