--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -41,8 +42,9 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "vue": "^2.5.16",
     "scss-loader": "0.0.1",
+    "style-loader": "^0.21.0",
+    "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
