--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "webextension-polyfill": "^0.2.1"
   },
   "dependencies": {}
 }
