--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
+    "webextension-polyfill": "^0.2.1",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "webextension-polyfill": "^0.2.1"
+    "webpack-cli": "^3.0.3"
   },
   "dependencies": {}
 }
