--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "vue-template-compiler": "^2.5.16",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "google-auth-library": "^1.6.1",
+    "googleapis": "^32.0.0"
   },
   "dependencies": {}
 }
