--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "babel-preset-env": "^1.7.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "css-loader": "^0.28.11",
+    "dexie": "^2.0.4",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "fake-indexeddb": "^2.0.4",
+    "google-auth-library": "^1.6.1",
+    "googleapis": "^32.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^23.1.0",
@@ -49,9 +53,7 @@
     "vue-template-compiler": "^2.5.16",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "google-auth-library": "^1.6.1",
-    "googleapis": "^32.0.0"
+    "webpack-cli": "^3.0.3"
   },
   "dependencies": {}
 }
