--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "pretest": "eslint --ignore-path=.gitignore .",
+    "lint": "eslint --ignore-path=.gitignore .",
     "build": "webpack",
     "precommit": "lint-staged"
   },
