Add lint against shadowing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,16 @@
   "plugins": ["prettier"],
   "extends": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "no-shadow": [
+      "error",
+      {
+        "builtinGlobals": true
+      }
+    ]
   },
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 8,
     "sourceType": "module"
   }
 }
