--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ charset = utf-8
 indent_size = 4
 
 # 2 spaces for Ruby, HTML and CSS/SASS
-[*.{js,json,rb,html,css,scss,sass,less}]
+[*.{js,json,rb,html,css,scss,sass,less,vue}]
 indent_size = 2
 
 # 4 spaces for markdown
