--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --coverage",
     "lint": "eslint --ignore-path=.gitignore .",
     "build": "webpack",
+    "dev": "webpack --watch",
     "precommit": "lint-staged"
   },
   "lint-staged": {
