--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack-cli": "^3.0.3"
   },
   "dependencies": {
+    "bignumber.js": "^7.2.1",
     "metamask-crx": "github:MetaMask/metamask-extension",
     "web3": "^1.0.0-beta.34"
   }
