--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.12.0",
