--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "vue-template-compiler": "^2.5.16",
     "webextension-polyfill": "^0.2.1",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "websocket": "^1.0.26"
   },
   "dependencies": {
     "metamask-crx": "github:MetaMask/metamask-extension",
