cleaned Makefile, added package target to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,11 @@ script:
  - make lint
  - make test
  - make build
+ - make package
+
+deploy:
+  provider: script
+  script: make publish
+  on:
+    tags: true
+    branch: master
