--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-vue": "^4.5.0",
     "fake-indexeddb": "^2.0.4",
+    "firefox-extension-deploy": "^1.1.0",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
     "html-webpack-plugin": "^3.2.0",
