--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,14 @@ script:
  - make build
  - make package
 
+after_success:
+ - make clean
+ - make build-production
+
 deploy:
   provider: script
   script: make publish
+  keep_files: true
   on:
     tags: true
     branch: master
