split AMO and Webstore deploy into seperate targets

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
 
 deploy:
   provider: script
-  script: make publish
+  script: make publish-amo
   keep_files: true
   on:
     tags: true
