--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-vue": "^4.5.0",
     "fake-indexeddb": "^2.0.4",
     "firefox-extension-deploy": "^1.1.0",
+    "github-reserved-names": "^1.1.1",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
     "html-webpack-plugin": "^3.2.0",
