--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier", "vue"],
-  "extends": ["prettier", "plugin:vue/essential"],
+  "extends": ["eslint:recommended", "prettier", "plugin:vue/essential"],
   "rules": {
     "prettier/prettier": "warn",
     "no-shadow": [
@@ -8,7 +8,8 @@
       {
         "builtinGlobals": true
       }
-    ]
+    ],
+    "no-console": ["off"]
   },
   "parserOptions": {
     "ecmaVersion": 2017,
