Major UI overhaul: vue-bootstrap -> vuetify

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "bluebird": "^3.5.1",
-    "bootstrap-vue": "^2.0.0-rc.11",
     "chrome-webstore-upload-cli": "^1.1.1",
     "css-loader": "^0.28.11",
     "dexie": "^2.0.4",
@@ -71,7 +70,9 @@
   "dependencies": {
     "bignumber.js": "^7.2.1",
     "idempotent-babel-polyfill": "^6.26.0",
+    "material-design-icons-iconfont": "^3.0.3",
     "metamask-crx": "github:MetaMask/metamask-extension",
+    "vuetify": "^1.1.1",
     "web3": "^1.0.0-beta.34"
   }
 }
