--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "raw-loader": "^0.5.1",
     "scss-loader": "0.0.1",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
     "vue-router": "^3.0.1",
