added and configured eslint-plugin-jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
-  "plugins": ["prettier", "vue"],
-  "extends": ["eslint:recommended", "prettier", "plugin:vue/essential"],
+  "plugins": ["prettier", "vue", "jest"],
+  "extends": [
+    "eslint:recommended",
+    "prettier",
+    "plugin:vue/essential",
+    "plugin:jest/recommended"
+  ],
   "rules": {
     "prettier/prettier": "warn",
     "no-shadow": [
