Allow shadowing Promise

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
       "error",
       {
         "builtinGlobals": true,
-        "allow": ["name"]
+        "allow": ["name", "Promise"]
       }
     ],
     "no-console": ["off"]
