Don't run eslint on json

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
+    "*.{js,vue}": [
+      "eslint"
+    ],
     "*.{js,json,css,md}": [
       "prettier --write",
-      "lint",
       "git add"
     ]
   },
