--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "material-design-icons-iconfont": "^3.0.3",
     "metamask-crx": "github:MetaMask/metamask-extension",
     "vuetify": "^1.1.1",
+    "vuex": "^3.0.1",
     "web3": "^1.0.0-beta.34"
   }
 }
