--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "raw-loader": "^0.5.1",
     "scss-loader": "0.0.1",
     "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
