--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
+    "@vue/devtools": "^1.1.0",
     "vue": "^2.5.16",
     "vue-loader": "^15.2.4",
     "vue-router": "^3.0.1",
