Smaller output files using various techniques

--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,29 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [["@babel/preset-env", {
+    "targets": {
+      "esmodules": true
+    }
+  }]],
   "plugins": [
     "lodash",
+    "@babel/plugin-transform-runtime",
     [
       "transform-imports",
       {
         "vuetify": {
           "transform": "vuetify/es5/components/${member}",
+        },
+        "@fortawesome/free-solid-svg-icons": {
+          "transform": "@fortawesome/free-solid-svg-icons/${member}",
+          skipDefaultConversion: true,
+        },
+        "@fortawesome/free-brands-svg-icons": {
+          "transform": "@fortawesome/free-brands-svg-icons/${member}",
+          skipDefaultConversion: true,
         }
       }
     ],
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-dynamic-import"
-  ]
+  ],
 }
