--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@babel/core": "^7.0.0-beta.54",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-brands-svg-icons": "^5.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
@@ -42,6 +44,7 @@
     "@vue/devtools": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-imports": "^1.5.0",
     "bluebird": "^3.5.1",
@@ -62,6 +65,9 @@
     "jest": "^23.1.0",
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.10",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "prettier": "1.13.5",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
@@ -76,16 +82,15 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webextension-polyfill": "^0.2.1",
-    "webpack": "^4.12.0",
+    "webpack": "^4.16.3",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.3",
     "websocket": "^1.0.26"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.54",
-    "babel-loader": "^8.0.0-beta.4",
     "bignumber.js": "^7.2.1",
     "eslint-plugin-jest": "^21.17.0",
-    "idempotent-babel-polyfill": "^6.26.0",
     "material-design-icons-iconfont": "^3.0.3",
     "metamask-crx": "github:MetaMask/metamask-extension#v4.8.0",
     "typeface-roboto": "0.0.54",
