--- a/package.json
+++ b/package.json
@@ -95,11 +95,12 @@
     "file-loader": "^2.0.0",
     "lerna": "^3.1.4",
     "material-design-icons-iconfont": "^3.0.3",
-    "metamask-extension-provider": "git://github.com:Powersource/metamask-extension-provider.git#patch-1",
+    "metamask-extension-provider": "git://github.com/Powersource/metamask-extension-provider.git#patch-1",
+    "npm": "^6.4.1",
     "typeface-roboto": "0.0.54",
     "vue-i18n": "^8.0.0",
     "vuetify": "^1.1.14",
     "vuex": "^3.0.1",
-    "web3": "git://github.com/jonashaag/web3.js.git#1.0-csp-fix"
+    "web3": "git://github.com:Powersource/web3.js.git#1.0-csp-fix"
   }
 }
