--- a/package.json
+++ b/package.json
@@ -101,6 +101,6 @@
     "vue-i18n": "^8.0.0",
     "vuetify": "^1.1.14",
     "vuex": "^3.0.1",
-    "web3": "^1.0.0-beta.36"
+    "web3": "git://github.com/Powersource/web3.js.git#1.0-csp-fix"
   }
 }
