--- a/package.json
+++ b/package.json
@@ -30,45 +30,45 @@
   },
   "homepage": "https://github.com/SuperuserLabs/thankful#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.3",
-    "@fortawesome/free-brands-svg-icons": "^5.3.0",
-    "@fortawesome/free-solid-svg-icons": "^5.3.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-brands-svg-icons": "^5.4.0",
+    "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "@vue/devtools": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-imports": "^1.5.0",
-    "bluebird": "^3.5.1",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "bluebird": "^3.5.2",
     "chrome-webstore-upload-cli": "^1.2.0",
     "css-loader": "^0.28.11",
     "csvtojson": "^2.0.8",
     "dexie": "^2.0.4",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.10.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-vue": "^4.7.1",
     "fake-indexeddb": "^2.0.4",
-    "firefox-extension-deploy": "^1.1.0",
-    "github-reserved-names": "^1.1.1",
+    "firefox-extension-deploy": "^1.1.1",
+    "github-reserved-names": "^1.1.3",
     "google-auth-library": "^1.6.1",
     "googleapis": "^32.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "jest": "^23.5.0",
-    "lint-staged": "^7.2.2",
-    "lodash": "^4.17.10",
+    "jest": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.4.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "1.13.5",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
@@ -79,26 +79,26 @@
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.1",
     "vue": "^2.5.17",
-    "vue-loader": "^15.4.1",
+    "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
     "webextension-polyfill": "^0.2.1",
-    "webpack": "^4.17.1",
+    "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.0",
-    "websocket": "^1.0.26"
+    "webpack-cli": "^3.1.2",
+    "websocket": "^1.0.28"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "bignumber.js": "^7.2.1",
-    "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-jest": "^21.24.1",
     "file-loader": "^2.0.0",
-    "lerna": "^3.1.4",
+    "lerna": "^3.4.3",
     "material-design-icons-iconfont": "^3.0.3",
-    "metamask-extension-provider": "git://github.com:Powersource/metamask-extension-provider.git#patch-1",
+    "metamask-extension-provider": "git://github.com/Powersource/metamask-extension-provider.git#patch-1",
     "typeface-roboto": "0.0.54",
-    "vue-i18n": "^8.0.0",
-    "vuetify": "^1.1.14",
+    "vue-i18n": "^8.1.0",
+    "vuetify": "^1.2.7",
     "vuex": "^3.0.1",
     "web3": "git://github.com/jonashaag/web3.js.git#1.0-csp-fix"
   }
