--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "bignumber.js": "^7.2.1",
+    "bignumber.js": "github:frozeman/bignumber.js-nolookahead",
     "eslint-plugin-jest": "^21.24.1",
     "file-loader": "^2.0.0",
     "lerna": "^3.4.3",
