--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,30 @@
 language: node_js
 node_js:
-    - '10'
+  - "10"
 
 cache:
-    directories:
-        - '$HOME/.npm'
+  directories:
+    - "$HOME/.npm"
 
 before_install:
-    - npm install -g npm@6.4
+  - npm install -g npm@6.4
 
 install:
-    - make install-ci
+  - make install-ci
 
 script:
-    - make lint
-    - make test
-    - make build
-    - make package
+  - make lint
+  - make test
+  - make build
+  - make package
 
 after_success:
-    - make clean
+  - make clean
 
 deploy:
-    provider: script
-    script: make publish-amo
-    skip_cleanup: true
-    on:
-        tags: true
-        branch: master
+  provider: script
+  script: make publish-amo
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
