--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - "10"
+  - '10'
 
 cache:
   directories:
-    - "$HOME/.npm"
+    - '$HOME/.npm'
 
 before_install:
   - npm install -g npm@6.4
