fixed CI build artifact (don't include non-production build folders)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ cache:
   directories:
     - '$HOME/.npm'
 
-before_install:
-  - npm install -g npm@6.4
-
 install:
   - make install-ci
 
@@ -16,15 +13,14 @@ script:
   - make lint
   - make test
   - make build
-  - make package
 
 after_success:
   - make clean
 
 deploy:
   provider: script
-  script: make publish-amo
-  skip_cleanup: true
+  script: make deploy-travis
+  skip_cleanup: false
   on:
     tags: true
     branch: master
