--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prettier": "1.13.5",
+    "prettier": "^1.15.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
