improved Makefile, fixed editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,7 @@ indent_size = 4
 # 2 spaces for Ruby, HTML and CSS/SASS
 [*.{js,json,rb,html,css,scss,sass,less,vue}]
 indent_size = 2
+insert_final_newline = false
 
 # 4 spaces for markdown
 [*.md]
