made typescript work with jest

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
-  "presets": [["@babel/preset-env", {
-    "targets": {
-      "esmodules": true
-    }
-  }]],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": false
+        }
+      }
+    ],
+    "@babel/typescript"
+  ],
   "plugins": [
     "lodash",
     "@babel/plugin-transform-runtime",
@@ -11,19 +17,19 @@
       "transform-imports",
       {
         "vuetify": {
-          "transform": "vuetify/es5/components/${member}",
+          "transform": "vuetify/es5/components/${member}"
         },
         "@fortawesome/free-solid-svg-icons": {
           "transform": "@fortawesome/free-solid-svg-icons/${member}",
-          skipDefaultConversion: true,
+          "skipDefaultConversion": true
         },
         "@fortawesome/free-brands-svg-icons": {
           "transform": "@fortawesome/free-brands-svg-icons/${member}",
-          skipDefaultConversion: true,
+          "skipDefaultConversion": true
         }
       }
     ],
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-dynamic-import"
-  ],
+  ]
 }
