ci: removed explicit 'git add' from the lint-staged config (modifications made by tasks will be automatically added to the git commit index)

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
       "eslint"
     ],
     "*.{js,ts,json,css,md,vue,yml}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "repository": {
