--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
         "allow": ["name", "Promise"]
       }
     ],
-    "no-console": ["off"]
+    "no-console": ["off"],
+    "vue/multi-word-component-names": ["off"]
   },
   "parserOptions": {
     "parser": "babel-eslint",
