--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "eslint --ignore-path=.gitignore --ext .vue --ext .js .",
+    "lint-fix": "eslint --fix --ignore-path=.gitignore --ext .vue --ext .js .",
     "build": "webpack",
     "dev": "webpack --watch",
     "precommit": "lint-staged"
