feat: started migration to vue-cli

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,24 @@
-node_modules/
 .DS_Store
+node_modules
+/dist
 coverage
-**/*.swp
-.vscode/
-.*cache
 
-# Build artefacts
-addon/**/*.js
-addon/**/*.html
-dist/**/*.js
-dist/**/*.css
-dist/**/*.woff
-dist/**/*.ttf
-dist/**/*.eot
-dist/**/*.html
-dist/**/*.json
-dist/**/*.map
-thankful.zip
-thankful-src.zip
-stats.json
 
-# .env secrets
-.env-webstore
+# local env files
+.env.local
+.env.*.local
 
-# a folder @ErikBjare uses to store related non-versioned files
-other
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
