fix: more progress on vue-cli migration

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ dist/**/*.woff
 dist/**/*.ttf
 dist/**/*.eot
 dist/**/*.html
-dist/**/*.json
 dist/**/*.map
+dist_ext/**/*.json
 thankful.zip
 thankful-src.zip
 stats.json
