--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bignumber.js": "github:frozeman/bignumber.js-nolookahead",
     "core-js": "^3.6.5",
     "core-js-bundle": "^3.1.4",
-    "eslint-plugin-jest": "^21.27.2",
     "file-loader": "^2.0.0",
     "lerna": "^4.0.0",
     "material-design-icons-iconfont": "^3.0.3",
@@ -69,13 +68,13 @@
     "babel-plugin-transform-imports": "^1.5.1",
     "bluebird": "^3.5.5",
     "chrome-webstore-upload-cli": "^2.0.1",
-    "css-loader": "^6.0",
     "csvtojson": "^2.0.10",
     "dexie": "^2.0.4",
-    "eslint": "^6.7.2",
+    "eslint": "^7.1",
     "eslint-config-prettier": "^8.0",
+    "eslint-plugin-jest": "^21.27.2",
     "eslint-plugin-prettier": "^4.0",
-    "eslint-plugin-vue": "^6.2",
+    "eslint-plugin-vue": "^8.1",
     "fake-indexeddb": "^2.1.1",
     "firefox-extension-deploy": "^1.1.1",
     "github-reserved-names": "^2.0.4",
@@ -93,21 +92,19 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "scss-loader": "0.0.1",
+    "sass-loader": "^10.2.0",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "terser-webpack-plugin": "^5.0",
     "ts-jest": "^27.0.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.5.2",
     "url-loader": "^1.1.2",
     "vue": "^2.6.14",
-    "vue-loader": "^15.9.0",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
     "webextension-polyfill": "^0.3.1",
-    "webpack": "^5.65.0",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5",
     "webpack-cli": "^4.9.1",
     "websocket": "^1.0.28"
