fix: more vue-cli migration stuff

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,6 @@
   },
   "parserOptions": {
     "parser": "babel-eslint",
-    "ecmaVersion": 2020,
-    "sourceType": "module"
+    "ecmaVersion": 2020
   }
 }
