--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,7 @@ coverage
 # Build artifacts
 addon/**/*.js
 addon/**/*.html
-dist/**/*.js
-dist/**/*.css
-dist/**/*.woff
-dist/**/*.ttf
-dist/**/*.eot
-dist/**/*.html
-dist/**/*.map
+dist
 dist_ext/**/*.json
 thankful.zip
 thankful-src.zip
