--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "webpack --watch",
-    "lint-fix": "eslint --fix --ignore-path=.gitignore --ext .vue --ext .js .",
+    "lint-fix": "eslint --fix --ignore-path=.gitignore --ext .vue --ext .js --ext .ts .",
     "precommit": "lint-staged",
     "test": "jest --coverage"
   },
@@ -30,6 +30,7 @@
     "metamask-extension-provider": "git://github.com/Powersource/metamask-extension-provider.git#patch-1",
     "moment": "^2.24.0",
     "regenerator-runtime": "^0.13.2",
+    "sass": "^1.45.0",
     "typeface-roboto": "0.0.54",
     "vue": "^2.6.11",
     "vue-i18n": "^8.11.2",
@@ -39,9 +40,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
@@ -94,8 +92,6 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^10.2.0",
     "style-loader": "^0.21.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "ts-jest": "^27.0.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.5.2",
