fix: fixed updated Vuetify, fixed Metamask/web3 accounts stuff (updated metamask-extension-provider)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-typescript": "^7.3.3",
+    "@mdi/font": "5.9.55",
     "@types/chrome": "0.0.81",
     "@types/node": "^11.13.15",
     "axios": "^0.21.1",
@@ -27,9 +28,10 @@
     "file-loader": "^2.0.0",
     "lerna": "^4.0.0",
     "material-design-icons-iconfont": "^3.0.3",
-    "metamask-extension-provider": "git://github.com/Powersource/metamask-extension-provider.git#patch-1",
+    "metamask-extension-provider": "^3.0",
     "moment": "^2.24.0",
     "regenerator-runtime": "^0.13.2",
+    "roboto-fontface": "*",
     "sass": "^1.45.0",
     "typeface-roboto": "0.0.54",
     "vue": "^2.6.11",
@@ -90,6 +92,7 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
+    "sass": "~1.32.0",
     "sass-loader": "^10.2.0",
     "style-loader": "^0.21.0",
     "ts-jest": "^27.0.1",
@@ -97,8 +100,10 @@
     "typescript": "^3.5.2",
     "url-loader": "^1.1.2",
     "vue": "^2.6.14",
+    "vue-cli-plugin-vuetify": "^2.4.5",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0",
     "webextension-polyfill": "^0.3.1",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5",
